[package]
name = "warp_async"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Nick Linker <nlinker@gmail.com>"]

[dependencies]
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper" }

env_logger = "0.6.2"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
reqwest = { version = "0.10", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
warp = "0.2"
